--- a/tailwindcss(cli)/src/index.html
+++ b/tailwindcss(cli)/src/index.html
@@ -9,5 +9,16 @@
   <h1 class="text-3xl font-bold underline">
     Hello world!
   </h1>
+
+  
+  <div class="flex flex-wrap">
+    <div class="basis-1/4 md:basis-1/2 border text-justify">01 04 60</div>
+    <div class="basis-1/4 md:basis-1/2 border">02</div>
+    <div class="basis-1/2 md:basis-1/1 border" >03</div>
+    <div class="basis-1/4 md:basis-1/2 border">01</div>
+    <div class="basis-1/4 md:basis-1/2 border">02</div>
+    <div class="basis-1/2 md:basis-1/1 border" >03</div>
+  </div>
+  
 </body>
 </html>
