--- a/tailwindcss(cdn)/tailwindcss(2.6.0).html
+++ b/tailwindcss(cdn)/tailwindcss(2.6.0).html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tailwindcss</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>tailwindcss @2.6.0</title>
+  <!-- 
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./tailwindcss@3.4.4.js"></script>
+    -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css" rel="stylesheet" type="text/css" />
   <link href="./tailwindcss.css" />
-  
+ 
 </head>
 <body>
+  <h1 class="text-3xl font-bold underline">
+    Hello world!
+  </h1>
   
   <div class="2xl:container border">
     box
