--- a/tailwindcss(cdn)/tailwindcss@3.4.4_type2/tailwindcss@3.4.4_type2.html
+++ b/tailwindcss(cdn)/tailwindcss@3.4.4_type2/tailwindcss@3.4.4_type2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +17,9 @@
     }
   </style>
 </head>
-<body  class="bg-gray-300 mobile:bg-gray-700 sm:bg-green-300 md:bg-blue-800 lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-orange-800" >
+
+<body
+  class="bg-gray-300 mobile:bg-gray-700 sm:bg-green-300 md:bg-blue-800 lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-orange-800">
   <h1 class="text-3xl font-bold underline bg-slate-200 text-coffee">
     tailwind.config.js 파일 선언
   </h1>
@@ -45,7 +48,7 @@
     <div class="w-1/6 border">w-1/6</div>
     <div class="w-5/6 border">w-5/6</div>
   </div>
-  <div class="2xl:w-full xl:w-5/6  lg:w-4/6  md:w-3/6 border">w-full</div>
+  <div class="2xl:w-full xl:w-5/6  lg:w-4/6  md:w-3/6 border">2xl:w-full xl:w-5/6 lg:w-4/6 md:w-3/6</div>
 
   <div data-theme="mytheme" class="p-16">
     <h1>my theme</h1>
@@ -61,7 +64,8 @@
 
   <div>
     <!-- Before extracting a custom class -->
-    <button class="py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75">
+    <button
+      class="py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75">
       Save changes
     </button>
 
@@ -72,11 +76,12 @@
 
     <style>
       @layer components {
-      .btn-primary {
-        @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
+        .btn-primary {
+          @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
+        }
       }
-    }
     </style>
   </div>
 </body>
+
 </html>
